change model uri to storage uri
